--- a/res/layout/xmainlist.xml
+++ b/res/layout/xmainlist.xml
@@ -22,6 +22,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/imgInfo"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/help_application"
+            android:src="@drawable/info" />
+
         <Spinner
             android:id="@+id/spRestriction"
             android:layout_width="0dip"
@@ -30,8 +38,9 @@
 
         <ImageView
             android:id="@+id/ivHelp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
             android:contentDescription="@string/help_application"
             android:src="@drawable/help" />
     </LinearLayout>
