--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -57,13 +57,24 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textIsSelectable="false" />
 
-        <EditText
-            android:id="@+id/etFilter"
-            android:layout_width="100dip"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:inputType="textNoSuggestions"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:orientation="horizontal" >
+
+            <CheckBox
+                android:id="@+id/cbFilter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/etFilter"
+                android:layout_width="100dip"
+                android:layout_height="wrap_content"
+                android:inputType="textNoSuggestions"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
     </RelativeLayout>
 
     <ProgressBar
