--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -65,7 +65,41 @@
 
             <EditText
                 android:id="@+id/etMac"
+                android:layout_width="200dip"
+                android:layout_height="wrap_content"
+                android:inputType="textNoSuggestions" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_phone"
+                android:textIsSelectable="false" />
+
+            <EditText
+                android:id="@+id/etPhone"
                 android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:inputType="textNoSuggestions|phone" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_imei"
+                android:textIsSelectable="false" />
+
+            <EditText
+                android:id="@+id/etImei"
+                android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:inputType="textNoSuggestions" />
         </TableRow>
