--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -66,12 +66,23 @@
             <CheckBox
                 android:id="@+id/cbFilter"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical" />
+
+            <ImageView
+                android:id="@+id/imgUsed"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/help_used"
+                android:src="@drawable/used_grayed" />
 
             <EditText
                 android:id="@+id/etFilter"
-                android:layout_width="100dip"
+                android:layout_width="75dip"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="6dip"
                 android:inputType="textNoSuggestions"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
