--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -12,123 +12,108 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <CheckBox
-            android:id="@+id/cbExpert"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_expert"
-            android:textAppearance="?android:attr/textAppearance" />
-
         <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_width="300dip"
+            android:layout_height="wrap_content"
+            android:stretchColumns="1" >
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_lat"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etLat"
-                    android:layout_width="100dip"
-                    android:layout_height="wrap_content"
                     android:inputType="numberDecimal|numberSigned" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_lon"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etLon"
-                    android:layout_width="100dip"
-                    android:layout_height="wrap_content"
                     android:inputType="numberDecimal|numberSigned" />
             </TableRow>
 
+            <TableRow>
+
+                <Button
+                    android:id="@+id/btnSearch"
+                    android:layout_width="100dip"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@android:string/search_go" />
+
+                <EditText
+                    android:id="@+id/etSearch"
+                    android:inputType="textNoSuggestions" />
+            </TableRow>
+
             <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:divider="?android:dividerVertical"
+                android:showDividers="middle" >
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_mac"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etMac"
-                    android:layout_width="200dip"
-                    android:layout_height="wrap_content"
                     android:inputType="textNoSuggestions" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_imei"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etImei"
-                    android:layout_width="200dip"
-                    android:layout_height="wrap_content"
                     android:inputType="textNoSuggestions" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_phone"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etPhone"
-                    android:layout_width="150dip"
-                    android:layout_height="wrap_content"
                     android:inputType="textNoSuggestions|phone" />
             </TableRow>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+            <TableRow>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:text="@string/settings_id"
                     android:textIsSelectable="false" />
 
                 <EditText
                     android:id="@+id/etId"
-                    android:layout_width="200dip"
-                    android:layout_height="wrap_content"
                     android:inputType="textNoSuggestions" />
+            </TableRow>
+
+            <TableRow
+                android:divider="?android:dividerVertical"
+                android:showDividers="middle" >
+
+                <CheckBox
+                    android:id="@+id/cbExpert"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_expert" />
             </TableRow>
         </TableLayout>
 
         <Button
             android:id="@+id/btnOk"
-            android:layout_width="75dip"
+            android:layout_width="100dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@android:string/ok" />
