--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -72,7 +72,8 @@
 
                 <EditText
                     android:id="@+id/etImei"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="numberDecimal|textNoSuggestions"
+                    android:maxLength="16" />
             </TableRow>
 
             <TableRow>
@@ -94,7 +95,8 @@
 
                 <EditText
                     android:id="@+id/etId"
-                    android:inputType="textNoSuggestions" />
+                    android:digits="0123456789ABCDEF"
+                    android:inputType="textCapCharacters|textNoSuggestions" />
             </TableRow>
 
             <TableRow>
@@ -105,7 +107,45 @@
 
                 <EditText
                     android:id="@+id/etGsfId"
-                    android:inputType="textNoSuggestions" />
+                    android:digits="0123456789ABCDEF"
+                    android:inputType="textCapCharacters|textNoSuggestions" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:text="@string/settings_mcc"
+                    android:textIsSelectable="false" />
+
+                <EditText
+                    android:id="@+id/etMcc"
+                    android:inputType="numberDecimal|textNoSuggestions"
+                    android:maxLength="3" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:text="@string/settings_mnc"
+                    android:textIsSelectable="false" />
+
+                <EditText
+                    android:id="@+id/etMnc"
+                    android:inputType="numberDecimal|textNoSuggestions"
+                    android:maxLength="2" />
+            </TableRow>
+
+            <TableRow>
+
+                <TextView
+                    android:text="@string/settings_country"
+                    android:textIsSelectable="false" />
+
+                <EditText
+                    android:id="@+id/etCountry"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:inputType="textCapCharacters|textNoSuggestions"
+                    android:maxLength="2" />
             </TableRow>
 
             <TableRow>
