--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -43,7 +43,7 @@
 
                 <Button
                     android:id="@+id/btnSearch"
-                    android:layout_width="100dip"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@android:string/search_go" />
