--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,24 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="CustomTheme" parent="android:Theme">
+        <item name="icon_edit">@drawable/edit_holo_dark</item>
+        <item name="icon_granted">@drawable/granted_holo_dark</item>
+        <item name="icon_help">@drawable/help_holo_dark</item>
+        <item name="icon_info">@drawable/info_holo_dark</item>
+        <item name="icon_internet">@drawable/info_holo_dark</item>
+        <item name="icon_used_grayed">@drawable/used_grayed_holo_dark</item>
+        <item name="icon_used">@drawable/used_holo_dark</item>
+    </style>
+
+    <style name="CustomTheme.Light" parent="android:Theme.Light">
+        <item name="icon_edit">@drawable/edit_holo_light</item>
+        <item name="icon_granted">@drawable/granted_holo_light</item>
+        <item name="icon_help">@drawable/help_holo_light</item>
+        <item name="icon_info">@drawable/info_holo_light</item>
+        <item name="icon_internet">@drawable/info_holo_light</item>
+        <item name="icon_used_grayed">@drawable/used_grayed_holo_light</item>
+        <item name="icon_used">@drawable/used_holo_light</item>
+    </style>
+
 </resources>
