--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Cream -->
     <color name="system_light">#FFFDD0</color>
+    <!-- Dark Gray -->
     <color name="system_dark">#A9A9A9</color>
 
 </resources>
