--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,6 @@
     <!-- Cream -->
     <color name="system_light">#FFFDD0</color>
     <!-- Dark Gray -->
-    <color name="system_dark">#A9A9A9</color>
+    <color name="system_dark">#CCCCCC</color>
 
 </resources>
