--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Cream -->
-    <color name="system_light">#FFFDD0</color>
-    <!-- Dark Gray -->
-    <color name="system_dark">#1A1A1A</color>
-
+    <color name="Cream">#FFFDD0</color>
+    <color name="DimGray">#696969</color>
+    
 </resources>
