--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -10,13 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ActivityMain" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_restrict"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textIsSelectable="false" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,14 +43,37 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/imgUsed"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="72dip"
-            android:contentDescription="@string/help_used"
-            android:src="?attr/icon_used_grayed" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/help_application"
+                android:paddingLeft="6dip"
+                android:src="?attr/icon_edit"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:layout_width="?android:attr/listPreferredItemHeightSmall"
+                android:layout_height="?android:attr/listPreferredItemHeightSmall"
+                android:contentDescription="@string/help_application"
+                android:paddingLeft="6dip"
+                android:src="?attr/icon_launcher"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/imgUsed"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/help_used"
+                android:paddingLeft="6dip"
+                android:src="?attr/icon_used_grayed" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,7 +90,7 @@
 
             <EditText
                 android:id="@+id/etFilter"
-                android:layout_width="75dip"
+                android:layout_width="100dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="6dip"
@@ -88,6 +104,13 @@
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
     </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_restrict"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
 
     <View
         android:layout_width="fill_parent"
